<resources>
    <string name="app_name">MuseH@me</string>
    <string name="evenements">Evenements</string>
    <string name="home">Home</string>
    <string name="collections">Collections</string>
    <string name="contact">Contact</string>
    <string name="page_d_accueil">Page d\'accueil</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nom">Nom :</string>
    <string name="votre_nom">Votre nom</string>
    <string name="pr_nom">Prénom :</string>
    <string name="votre_prenom">Votre prenom</string>
    <string name="email">Email :</string>
    <string name="exemple_exemple_fr">exemple@exemple.fr</string>
    <string name="votre_sujet">Votre sujet</string>
    <string name="sujet">Sujet:</string>
    <string name="message">Message:</string>
    <string name="envoyer">Envoyer</string>
    <string name="wifi_connection">La connection wifi est activée.</string>
    <string name="mobile_connection">La connection mobile est activée.</string>
    <string name="no_wifi_or_mobile">L\'utilisateur n\'est pas connecté.</string>
    <string name="storage">1</string>
    <string name="title_activity_collection">Collection</string>
    <string name="title_activity_evenement_detail">Détail Evenement</string>
    <string name="mini_description">Description</string>
    <string name="titre">Titre</string>
    <string name="informations">Informations</string>
    <string name="supervision_info">Sous la supervision de: Guilbert Fréderic, HUBERT Benoît</string>
    <string name="developers">Personnes ayant développés l\'application</string>
    <string name="supervision_projet">Personnes ayant supervisés le projet</string>
    <string name="permissions">Le mode hors ligne nécessite d\'avoir la permission du stockage sur le téléphone</string>
    <string name="aucun_contenu">Aucun contenu disponible actuellement.</string>
</resources>
